--- a/API/config/packages/security.yaml
+++ b/API/config/packages/security.yaml
@@ -1,29 +1,64 @@
+# security:
+#     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+#     password_hashers:
+#         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+#     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+#     providers:
+#         users_in_memory: { memory: null }
+#     firewalls:
+#         dev:
+#             pattern: ^/(_(profiler|wdt)|css|images|js)/
+#             security: false
+#         main:
+#             lazy: true
+#             provider: users_in_memory
+
+#             # activate different ways to authenticate
+#             # https://symfony.com/doc/current/security.html#the-firewall
+
+#             # https://symfony.com/doc/current/security/impersonating_user.html
+#             # switch_user: true
+
+#     # Easy way to control access for large sections of your site
+#     # Note: Only the *first* access control that matches will be used
+#     access_control:
+#         # - { path: ^/admin, roles: ROLE_ADMIN }
+#         # - { path: ^/profile, roles: ROLE_USER }
+
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+    # Remplacer 'encoders' par 'password_hashers'
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+        App\Entity\User:
+            algorithm: auto
+
+    # Définition des fournisseurs d'utilisateurs
     providers:
-        users_in_memory: { memory: null }
+        database:
+            entity:
+                class: App\Entity\User
+                property: email
+
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+        # API Firewall
+        api:
+            pattern: ^/api/
+            stateless: true
+            jwt: ~
+
+        # Point de connexion pour l'authentification par JSON
+        login:
+            pattern: ^/api/login
             security: false
-        main:
-            lazy: true
-            provider: users_in_memory
+            json_login:
+                check_path: /api/login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: ROLE_USER }
+
+
 
 when@test:
     security:
