--- a/API/config/packages/api_platform.yaml
+++ b/API/config/packages/api_platform.yaml
@@ -1,7 +1,21 @@
 api_platform:
     title: Hello API Platform
     version: 1.0.0
+    swagger:
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
     defaults:
         stateless: true
         cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
+            vary: ["Content-Type", "Authorization", "Origin"]
+
+    formats:
+        json: ["application/json"]
+        jsonld: ["application/ld+json"]
+
+    mapping:
+        paths:
+            - '%kernel.project_dir%/src/Entity'
+            - '%kernel.project_dir%/src/Controller'
