--- a/API/config/packages/framework.yaml
+++ b/API/config/packages/framework.yaml
@@ -4,7 +4,11 @@ framework:
     #csrf_protection: true
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: false
+    session:
+        enabled: true
+        save_path: '%kernel.cache_dir%/sessions'
+        storage_factory_id: session.storage.factory.native
+        
 
     #esi: true
     #fragments: true
