--- a/API/config/packages/security.yaml
+++ b/API/config/packages/security.yaml
@@ -1,64 +1,35 @@
-# security:
-#     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-#     password_hashers:
-#         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-#     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
-#     providers:
-#         users_in_memory: { memory: null }
-#     firewalls:
-#         dev:
-#             pattern: ^/(_(profiler|wdt)|css|images|js)/
-#             security: false
-#         main:
-#             lazy: true
-#             provider: users_in_memory
-
-#             # activate different ways to authenticate
-#             # https://symfony.com/doc/current/security.html#the-firewall
-
-#             # https://symfony.com/doc/current/security/impersonating_user.html
-#             # switch_user: true
-
-#     # Easy way to control access for large sections of your site
-#     # Note: Only the *first* access control that matches will be used
-#     access_control:
-#         # - { path: ^/admin, roles: ROLE_ADMIN }
-#         # - { path: ^/profile, roles: ROLE_USER }
 
 security:
-    # Remplacer 'encoders' par 'password_hashers'
-    password_hashers:
-        App\Entity\User:
-            algorithm: auto
-
-    # Définition des fournisseurs d'utilisateurs
+    # Configuration des utilisateurs
     providers:
-        database:
+        users:
             entity:
                 class: App\Entity\User
                 property: email
 
-    firewalls:
-        # API Firewall
-        api:
-            pattern: ^/api/
-            stateless: true
-            jwt: ~
+    password_hashers:
+        App\Entity\User:
+            algorithm: bcrypt
 
-        # Point de connexion pour l'authentification par JSON
-        login:
-            pattern: ^/api/login
-            security: false
+    firewalls:
+        main:
+            stateless: true
+            provider: users
             json_login:
-                check_path: /api/login
+                check_path: /auth
+                username_path: email
+                password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            jwt: ~
 
+    # Contrôle d'accès
     access_control:
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api, roles: ROLE_USER }
-
-
+        - { path: ^/api/$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/docs, roles: PUBLIC_ACCESS }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/artists/\d+/albums/\d+/songs/\d+$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
