--- a/API/package.json
+++ b/API/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.0.0",
+    "encore": "^0.0.30-beta",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0"
   },
